2011-02-03  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/dmcs/StreamingDMCS.cpp: Get neighbors from query_plan.
	* src/network/ThreadFactory.cpp: Likewise.
	* include/network/ThreadFactory.h: Likewise.

	* src/solver/RelSatSolver.cpp: Do nothing when trail is empty. The
	outer loop takes care of sending NULL to OUT_MQ.

	* src/dmcs/StreamingDMCS.cpp: Check for NULL pointer.

	* include/dmcs/CommandTypeFactory.h: Add conflicts_driven related stuff.
	* src/solver/RelSatSolver.cpp: Likewise.
	* src/network/ThreadFactory.cpp: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* src/dmcsd.cpp: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.

	* include/solver/SatSolverFactory.h: Likewise.
	* include/solver/RelSatSolver.h: Likewise.
	* include/network/ThreadFactory.h: Likewise.
	* include/network/JoinThread.h: Likewise.
	* include/dmcs/StreamingDMCS.h: Likewise.

	* include/dmcs/ProgramOptions.h: Add CONFLICTS_DRIVEN option.

2011-02-02  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/solver/RelSatSolver.cpp: Working on backtracking.

	* include/solver/ChoicePoint.h: Find first undecided atom.

2011-02-02  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/solver/ChoicePoint.h: Include numeric.

	* include/dmcs/ConflictNotification.h: Return ostream in
	operator<<.

2011-02-02  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/solver/ChoicePoint.h: Get global id of an atom.

	* include/dmcs/ConflictNotification.h: opeator<<

	* include/network/ThreadFactory.h: Pass orig_sigs_size to
	RelSatSolver.
	* src/solver/RelSatSolver.cpp: Likewise.
	* src/network/ThreadFactory.cpp: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* include/solver/SatSolverFactory.h: Likewise.
	* include/solver/RelSatSolver.h: Likewise.

	* src/solver/RelSatSolver.cpp: Try next flipping possibility when
	receiving EOF.

	* src/network/RelSatSolverThread.cpp: Catch restart request.

	* include/solver/ChoicePoint.h: Add ChoicePoint.h
	* include/solver/Makefile.am: Likewise.
